# OpenCL

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/oclBuffer/: CMakeLists.txt  buffer.cl  buffer.cpp
examples/oclImage/: CMakeLists.txt  image.cl  image.cpp
libs/: CMakeLists.txt
libs/liboclWrapper/: CMakeLists.txt  oclWrapper.cpp  oclWrapper.hpp
