#------------------------------------------------------------
# oclBuffer
#------------------------------------------------------------
message ("-")
ADD_SUBDIRECTORY(oclBuffer)

#------------------------------------------------------------
# oclImage
#------------------------------------------------------------
message ("-")
ADD_SUBDIRECTORY(oclImage)